--- a/search.html
+++ b/search.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -205,7 +205,6 @@ function displaySearchResults(results, query) {
       <div class="product-info">
         <div class="product-category-badge">${product.categoryName}</div>
         <h3 class="product-title">${product.name}</h3>
-        <p class="product-description">${product.description || ''}</p>
         <div class="product-price">${price}</div>
         <a href="product.html?id=${product.id}" class="btn-view">View Details</a>
       </div>`;
@@ -245,4 +244,4 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 </body>
-</html>
+</html> -->
