--- a/index.html
+++ b/index.html
@@ -167,69 +167,12 @@
 
        /* Hamburger */
 .menu-toggle {
-  width: 20%;
-  height: 1.5vh;
-  cursor: pointer;
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: -5%;
-  margin-right: 8%;
-  z-index: 1001;
-  position: relative;
-}
-.menu-toggle span {
-  display: block;
-  height: 1.5px;
-  width: 100%;
-  background: white;
-  border-radius: 2px;
-  transition: 0.3s;
-}
-/* Animate hamburger → X */
-.menu-toggle.active span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-.menu-toggle.active span:nth-child(2) {
-  opacity: 0;
-}
-.menu-toggle.active span:nth-child(3) {
-  transform: rotate(-45deg) translate(6px, -6px);
 }
 
-/* Mobile nav menu hidden by default */
-@media (max-width: 992px) {
-  
-   nav ul {
-    flex-direction: column; /* stack links vertically */
-    display: none;          /* hidden by default */
-    padding-left: 1rem;     /* shift whole menu slightly */
-  }
 
-  nav ul.active {
-    display: flex;   /* shown when active */
-    width: 100%;
-    margin-left: 20%;
-    align-items: flex-start;
-  }
-  
-  .menu-toggle {
-  display: flex;
-}
 
-  .nav-search {
-            display: flex;
-            align-items: center;
-            margin-top: 5%;
-            margin-bottom: 5%;
-        }
 
-        #nav-search-input {
-            padding: 0.2rem 0.5rem;
-        }
-
-     
-}
 
 
 
@@ -344,6 +287,56 @@
 
 /* Mobile-specific styles */
 @media (max-width: 576px) {
+
+    .menu-toggle {
+  width: 100%;
+  height: 1.5vh;
+  cursor: pointer;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: -5%;
+  margin-right: 8%;
+  z-index: 1001;
+  position: relative;
+  display: flex;
+}
+.menu-toggle span {
+  display: block;
+  height: 1.5px;
+  width: 100%;
+  background: white;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+    nav ul {
+    flex-direction: column; /* stack links vertically */
+    display: none;          /* hidden by default */
+    padding-left: 1rem;     /* shift whole menu slightly */
+  }
+
+  nav ul.active {
+    display: flex;   /* shown when active */
+    width: 100%;
+    margin-left: 20%;
+    align-items: flex-start;
+  }
+  
+
+
+  .nav-search {
+            display: flex;
+            align-items: center;
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
+
+        #nav-search-input {
+            padding: 0.2rem 0.5rem;
+        }
+
+
     .features-grid {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto;
@@ -596,7 +589,9 @@
 /* General responsive tweaks */
 @media (max-width: 1200px) {
   .container { width: 100%; }
-  .logo img { width: 10vh; }
+  .logo img { 
+    margin-top: 8%;
+    width: 10vh; }
   #nav-menu li{
     margin-left: 3%;
   }
@@ -1027,11 +1022,7 @@ font-size: 2.0rem;}
   <div class="container header-container">
     
     <!-- Mobile Menu Toggle -->
-    <div id="menu-toggle" class="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+      <i id="menu-toggle"  class="fa-solid fa-bars menu-toggle"></i>
 
     <!-- Logo -->
     <div class="logo">
