Update website content

--- a/test.html
+++ b/test.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMT Machinery (Malaysia) Sdn. Bhd. - Industrial Equipment Supplier</title>
+    <title>EMT Machinery - Products</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-      <link rel="stylesheet" href="css/general.css">
-  <style>
-         /* Main Content */
+        <link rel="stylesheet" href="css/general.css">
+
+    <style>
+       
+        /* Main Content */
         main {
             flex: 1;
             padding: 2rem 0;
@@ -305,11 +307,11 @@
 }
 
 
-</style>
 
+    </style>
 </head>
 <body>
-  <header class="site-header">
+    <header class="site-header">
   <div class="container header-container">
     
     <!-- Mobile Menu Toggle -->
@@ -347,10 +349,8 @@
   </div>
 </header>
 
-
-
     <main>
- <!-- Breadcrumb inside container -->
+    <!-- Breadcrumb inside container -->
     <div class="container">
         <div class="breadcrumb">
             <a href="index.html">Home</a>
@@ -377,50 +377,17 @@
             </div>
         </section>
     </div>
+</main>
 
-
-
-
-
-        <a href="https://wa.me/601110513111" target="_blank" class="whatsapp-float">
-    <i class="fab fa-whatsapp"></i>
-</a>
-    </main>
 
     <footer>
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>About Us</h3>
-                    <p>EMT Machinery (M) Sdn. Bhd. is a leading supplier of industrial equipment and tools in Malaysia, serving professionals since 2013.</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Contact Info</h3>
-                    <ul class="contact-info">
-                        <li><i class="fas fa-map-marker-alt"></i> No.25, Lorong Pahlawan 9, Jalan Pahlawan, 96000 Sibu, Sarawak, Malaysia</li>
-                        <li><i class="fas fa-phone"></i> 084 - 216905</li>
-                        <li><i class="fas fa-mobile-alt"></i> 0111 - 0513111</li>
-                        <li><i class="fas fa-envelope"></i> emtmachinery@gmail.com</li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul class="contact-info">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="products.html">Products</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2023 EMT Machinery (Malaysia) Sdn. Bhd. All rights reserved.</p>
-            </div>
+            <p>&copy; 2023 EMT Machinery (Malaysia) Sdn. Bhd. All rights reserved.</p>
+            <p>Powered by your team</p>
         </div>
     </footer>
 
-    <script>
-
+<script>
 const categoryList = document.getElementById('category-list');
 const productsGrid = document.getElementById('products-grid');
 const pageTitle = document.getElementById('page-title');
@@ -710,8 +677,10 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 
-    </script>
-     <script src="js/general.js"></script>
+</script>
+
+
+
 
 </body>
 </html>
