Update website content

--- a/product.html
+++ b/product.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Product Details - EMT Machinery</title>
-  <link rel="stylesheet" href="css/general.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EMT Machinery (Malaysia) Sdn. Bhd. - Industrial Equipment Supplier</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+      <link rel="stylesheet" href="css/general.css">
   <style>
-   
-    .product-detail { padding: 2rem 0; }
+      .product-detail { padding: 2rem 0; }
     .breadcrumbs { margin-bottom: 2rem; font-size: 0.9rem; color: #666; }
     .breadcrumbs a { color: var(--primary); text-decoration: none; }
     .breadcrumbs span { color: var(--secondary); }
@@ -65,7 +64,7 @@
     .product-info h1 { font-size: 2rem; margin-bottom: 1rem; }
     
     .btn-large { padding: 1rem 2rem; font-size: 1.1rem; background: var(--primary); color: #fff; text-decoration: none; border-radius: 5px; }
-    .description-content { line-height: 1.8; margin-bottom: 0rem; font-size: 1.1rem; color: #333; }
+    .description-content { line-height: 1.8; margin-bottom: 2rem; font-size: 1.1rem; color: #333; }
     .specifications { background: #f8f9fa; padding: 2rem; border-radius: 10px; margin: 2rem 0; }
     .specifications h3 { color: var(--primary); margin-bottom: 1rem; }
     .specifications pre { white-space: pre-wrap; font-family: inherit; line-height: 1.6; }
@@ -105,7 +104,6 @@
     }
     .view-store-rating:hover { background: #1a2530; }
 
-    footer { background: #f2f2f2; text-align: center; padding: 1rem 0; margin-top: 3rem; font-size: 0.9rem; color: #777; }
 
     .loading, .error { text-align: center; padding: 3rem; color: #666; }
     .error { color: #e74c3c; }
@@ -141,10 +139,11 @@
   border-radius: 5px;
 }
 
-  </style>
+</style>
+
 </head>
 <body>
-<header class="site-header">
+  <header class="site-header">
   <div class="container header-container">
     
     <!-- Mobile Menu Toggle -->
@@ -164,7 +163,6 @@
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="community.html">Community</a></li>
-        <li><a href="admin.html">Admin</a></li>
       </ul>
 
       <!-- Search Bar -->
@@ -181,7 +179,10 @@
     </nav>
   </div>
 </header>
-<main class="product-detail">
+
+
+
+   <main class="product-detail">
   <div class="container">
     <div class="breadcrumbs" id="breadcrumbs">
       <a href="index.html">Home</a> &gt; 
@@ -196,7 +197,7 @@
       </div>
     </div>
   </div>
-  <a href="https://wa.me/601110513111" target="_blank" class="whatsapp-float">
+        <a href="https://wa.me/601110513111" target="_blank" class="whatsapp-float">
     <i class="fab fa-whatsapp"></i>
 </a>
     </main>
@@ -232,7 +233,7 @@
         </div>
     </footer>
 
-<script>
+  <script>
 document.addEventListener('DOMContentLoaded', loadProductData);
 
 async function loadProductData() {
@@ -457,6 +458,7 @@ function formatDate(dateString) {
   });
 }
 </script>
-<script src="js/general.js"></script>
+     <script src="js/general.js"></script>
+
 </body>
 </html>
