Update website content

--- a/community.html
+++ b/community.html
@@ -404,7 +404,7 @@ document.getElementById("lightbox").addEventListener("click", function(e) {
 });
 
   </script>
-
+<script src="js/general.js"></script>
 
 
 </body>
