Update website content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMT Machinery (Malaysia) Sdn. Bhd. - Industrial Equipment Supplier</title>
+    <link rel="icon" type="image/png" href="mainPage/EMT LOGO [REMOVE BG].png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
       <link rel="stylesheet" href="css/general.css">
   <style>
@@ -484,7 +486,7 @@
 @media (max-width: 1024px) {
     .products-grid {
         gap: 0.8rem;
-         width: 10%;
+         
     }
     .product-info h4 {
         font-size: 1rem;
