--- a/community.html
+++ b/community.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Community Reviews</title>
+      <link rel="icon" type="image/png" href="mainPage/EMT LOGO [REMOVE BG].png">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="css/general.css">
 <style>
