Update website content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMT Machinery (Malaysia) Sdn. Bhd. - Industrial Equipment Supplier</title>
+      <title>EMT Machinery (Malaysia) Sdn. Bhd. - Industrial Equipment Supplier</title>
+  <meta name="description" content="EMT Machinery (M) Sdn. Bhd. supplies industrial equipment, welding machines, generators, compressors, and more since 2013. Trusted by professionals across Malaysia.">
+  <meta name="keywords" content="Industrial Equipment Malaysia, Welding Machines, Generators, Compressors, Power Tools, EMT Machinery">
+  <meta property="og:title" content="EMT Machinery (Malaysia) Sdn. Bhd.">
+<meta property="og:description" content="Leading supplier of industrial equipment, tools, and machinery in Malaysia since 2013.">
+<meta property="og:url" content="https://www.emtmachinery.com.my">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://www.emtmachinery.com.my/images/logo.png">
+
     <link rel="icon" type="image/png" href="mainPage/EMT LOGO [REMOVE BG].png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -959,7 +967,7 @@ font-size: 2.0rem;}
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 EMT Machinery (Malaysia) Sdn. Bhd. All rights reserved.</p>
+                <p>&copy; 2025 EMT Machinery (Malaysia) Sdn. Bhd. All rights reserved.</p>
             </div>
         </div>
     </footer>
